# images-gallery

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  build.sh  docker-run.sh  main.py  mongo_client.py  pyproject.toml
frontend/: Dockerfile  build.sh  docker-run.sh  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/components/: Gallery.js  Header.js  ImageCard.js  Search.js  Spinner.js  Toast.js  Welcome.js
