[tool.poetry]
name = "images_gallery_api"
version = "0.1.0"
description = "Images Gallery API"
authors = ["Vitor Centeio <vitor.centeio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
Flask-Cors = "^3.0.10"
pymongo = "^4.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79